--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -19,8 +19,6 @@ jobs:
   publish-gpr:
     needs: build
     runs-on: ubuntu-latest
-    env:
-      NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
     permissions:
       packages: write
       contents: read
@@ -33,5 +31,7 @@ jobs:
       - run: npm ci
       - run: |
           echo "@andreyshpigunov:registry=https://npm.pkg.github.com" >> .npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{secrets.GITHUB_TOKEN}}" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{secrets.NPM_TOKEN}}" >> .npmrc
       - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
