--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -31,7 +31,7 @@ jobs:
       - run: npm ci
       - run: |
           echo "@andreyshpigunov:registry=https://npm.pkg.github.com" >> .npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{secrets.NPM_TOKEN}}" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{secrets.GITHUB_TOKEN}}" >> .npmrc
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
