--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -15,7 +15,6 @@ jobs:
       - run: npm ci
       - run: npm test
 
-
   publish-gpr:
     needs: build
     runs-on: ubuntu-latest
@@ -29,9 +28,6 @@ jobs:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
-      - run: |
-          echo "@andreyshpigunov:registry=https://npm.pkg.github.com" >> .npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{secrets.GITHUB_TOKEN}}" >> .npmrc
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
