--- a/.editorconfig
+++ b/.editorconfig
@@ -7,3 +7,9 @@ indent_size = 4
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.{json,yml}]
+indent_size = 2
+
+[*.log]
+max_line_length = 0
