--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
 	"scripts": {
 		"build-css": "postcss src/css/*.css -u postcss-import -u postcss-nesting -u postcss-custom-media -u postcss-custom-selectors -u postcss-extend -u postcss-for -u postcss-each -u autoprefixer -u cssnano --no-map -d dist/",
 		"build-js": "parcel build src/js/*.js --no-source-maps --no-cache --dist-dir dist/",
-		"build": "npm run build-css && npm run build-js",
-		"test": "jest --passWithNoTests"
+		"build": "npm run build-css && npm run build-js"
 	},
 	"repository": {
 		"type": "git",
