--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@andreyshpigunov/x",
-	"version": "0.2.29",
+	"version": "0.2.30",
 	"devDependencies": {
 		"@babel/preset-env": "^7.26.9",
 		"@jest/globals": "^29.7.0",
@@ -8,8 +8,10 @@
 		"autoprefixer": "^10.1.0",
 		"babel-jest": "^29.7.0",
 		"cssnano": "^5.0.2",
+		"docdash": "^2.0.2",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
+		"jsdoc": "^4.0.4",
 		"parcel": "^2.0.1",
 		"postcss": "^8.2.1",
 		"postcss-cli": "^8.3.0",
