--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@andreyshpigunov/x",
-	"version": "0.3.87",
+	"version": "0.3.88",
 	"devDependencies": {
 		"@babel/preset-env": "^7.26.9",
 		"@jest/globals": "^29.7.0",
@@ -40,5 +40,8 @@
 	"homepage": "https://andreyshpigunov.github.io/x/",
 	"browserslist": [
 		"defaults"
-	]
+	],
+	"exports": {
+		".": "./index.js"
+	}
 }
