--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@andreyshpigunov/x",
-	"version": "0.3.88",
+	"version": "0.3.89",
 	"devDependencies": {
 		"@babel/preset-env": "^7.26.9",
 		"@jest/globals": "^29.7.0",
@@ -42,6 +42,7 @@
 		"defaults"
 	],
 	"exports": {
-		".": "./index.js"
+		".": "./index.js",
+    "./x.css": "./dist/x.css"
 	}
 }
